kong/app-example/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-example
  labels:
    app.kubernetes.io/name: app-example
spec:
  rules:
    - host: app-example.app-example.localhost
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: app-example
                port:
                  name: http
